test/fails/bad_types/bad_if3.lgl
void main() {
    bool b = 1 == 1;
    if (b) { int x = 5; } else { skip; }
    print x;
}